package com.m2i.poe.geometry;

public class Carre extends Rectangle {

    public Carre(double cote) {
        super(cote,cote);
    }
}
